# app/serializers/user_profile_serializer.rb
@@ -1,5 +1,5 @@
 class UserProfileSerializer < ActiveModel::Serializer
-  attributes :name, :date_joined, :posts_count, :entries
+  attributes :name, :date_joined, :posts_count, :entries, :followers_count, :followings_count, :follow_id
 
   alias profile_user object
   delegate :name, to: :object
@@ -10,6 +10,18 @@ class UserProfileSerializer < ActiveModel::Serializer
 
   def posts_count
     profile_user.entries.count
+  end
+
+  def followers_count
+    profile_user.followers.count
+  end
+
+  def followings_count
+    profile_user.followings.count
+  end
+
+  def follow_id
+    Follow.where(follower: current_user, following: profile_user).take&.id
   end
 
   def entries
